maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:89: error: value - is not a member of String
    return "("+x-1+","+y+")"
                ^JediEscaper:91: error: value - is not a member of String
    return "("+x+","+y-1+")"
                      ^JediEscaper:90: error: type mismatch;
 found   : Unit
 required: String
  } else if (y > 0 && getIndication(x,y-1) == valeur-1) {
         ^